# dependency_track_dashboard

./: .env.example  README.md  app.py  docker-compose.yml  dt_client.py  pyproject.toml  requirements.txt
